# coffeestats-django

./: .dockerignore  .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTORS.txt  LICENSE.txt  Pipfile  README.rst  Vagrantfile  doc-requirements.txt  docker-compose.yml  generate-env.sh  pyproject.toml  setup.py
coffeestats/: .coveragerc  Dockerfile  manage.py  setup.cfg
coffeestats/caffeine/: admin.py  authbackend.py  context_processors.py  forms.py  middleware.py  models.py  tests.py  urls.py  views.py
coffeestats/caffeine/migrations/: 0001_initial.py  0002_auto_20150219_0031.py  (+8 more)
coffeestats/caffeine_api_v1/: urls.py  views.py
coffeestats/caffeine_api_v2/: permissions.py  serializers.py  urls.py  views.py
coffeestats/caffeine_oauth2/: forms.py  models.py  oauth2_server.py  urls.py  views.py
coffeestats/coffeestats/: tests.py  urls.py  wsgi.py
coffeestats/core/: tests.py  utils.py
coffeestats/functional_tests/: base.py  test_authentication.py  test_base_pages.py  test_oauth_registration.py
coffeestats/templates/: about.html  base.html  explore.html  imprint.html  index.html  js_sanitize_email.html  js_sanitize_not_empty.html  js_sanitize_password.html  js_sanitize_string.html  js_sanitize_username.html  ontherun.html  overall.html  piwik_javascript.js  profile.html  selecttimezone.html  settings.html
docker/: start-coffeestats.sh
docker/db/: Dockerfile  coffeestats-db.sh
docs/: api.rst  code.rst  conf.py  credits.rst  deploy.rst  develop.rst  index.rst  migrate_original_coffeestats.sh  requirements.txt  tests.rst
requirements/: base.txt  docs.txt  local.txt  test.txt
salt/: bootstrap.sh
(+117 files in other folders)
