[tool.poetry]
name = "coffeestats"
version = "0.3.0"
description = "Coffeestats.org"
authors = ["Jan Dittberner <jan@dittberner.info>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
django = "<3"
djangorestframework = "<3.10"
drf-nested-routers = "<0.94"
django-oauth-toolkit = "^2.3.0"
django-registration = "<3.3"
psycopg2-binary = "^2.9.9"
django-model-utils = "<4.3"
pillow = "^10.3.0"
passlib = "^1.7.4"
bcrypt = "^4.1.3"
django-absolute = "^0.3"
django-debug-toolbar = "<3.3"
django-extensions = "<3.2"
six = "^1.16.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
selenium = "^4.20.0"
coverage = "^7.5.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
