[tool.poetry]
name = "coffeestats"
version = "0.3.0"
description = "Coffeestats.org"
authors = ["Jan Dittberner <jan@dittberner.info>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
django = "<5"
djangorestframework = "*"
drf-nested-routers = "*"
django-registration = "*"
psycopg2-binary = "^2.9.9"
django-model-utils = "*"
pillow = "^10.3.0"
passlib = "^1.7.4"
bcrypt = "4.0.1"
django-absolute = "^0.3"
django-debug-toolbar = "*"
django-extensions = "*"
six = "^1.16.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
selenium = "^4.20.0"
coverage = "^7.5.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
